--- a/.tmp/public/linker/modules/about/about.html
+++ b/.tmp/public/linker/modules/about/about.html
@@ -19,28 +19,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-7">
-                    <p><strong>Comprising of tested individuals drawn mainly from the aviation and business management industry, QTL has grown to become a leader in her local industry.</strong></p>
-                    <p><strong>Brief History</strong></p>
-                    <p>Quantum Travels Limited started with two plastic chairs, a table and a truckload of passion. Incorporated in 2003, we were licensed for operation by IATA in 2004. We have evolved from the era of manual ticketing to become No. 1 on the Billing Settlement Platform(BSP) through high volume of sales and sizeable turnovers.</p>
-                      <p>
+                    <p align="justify"><strong>Comprising of tested individuals drawn mainly from the aviation and business management industry, QTL has grown to become a leader in her local industry.</strong></p>
+                    <p align="justify"><strong>Brief History</strong></p>
+                    <p align="justify">Quantum Travels Limited started with two plastic chairs, a table and a truckload of passion. Incorporated in 2003, we were licensed for operation by IATA in 2004. We have evolved from the era of manual ticketing to become No. 1 on the Billing Settlement Platform(BSP) through high volume of sales and sizeable turnovers.</p>
+                      <p align="justify">
                           Striving to be more than your average travel agency, QTL expanded into a full blown Travel
                           Management Company providing all aspects of travel management services ranging from visa advisory to security tracking at our travellers' destinations
                       </p>
-                     <p>In 2009, we established an exclusive partnership with BCD Travel, the 3rd largest global Travel Management Company. This partnership
+                     <p align="justify">In 2009, we established an exclusive partnership with BCD Travel, the 3rd largest global Travel Management Company. This partnership
                          produced BCD Travel Nigeria, the corporate travel management expression of QTL. On this platform we cater to our corporate travellers to facilitate ease of travel and support then in achieving their travel goals through our all encompassing service offering.</p>
-                    <p>QTL has witnessed exponential growth since inception and now boasts five offices across Nigeria as well as several implants on clients' sites.</p>
-                    <p><strong>QTL in Figures</strong></p>
-                    <p>Workforce: 64</p>
-                    <p>Locations: 5</p>
-                    <p>Turnover: over $56m as at 2012</p>
+                    <p align="justify">QTL has witnessed exponential growth since inception and now boasts five offices across Nigeria as well as several implants on clients' sites.</p>
+                    <p align="justify"><strong>QTL in Figures</strong></p>
+                    <p align="justify">Workforce: 64</p>
+                    <p align="justify">Locations: 5</p>
+
                 </div>
                 <div class="col-md-5">
                     <div class="w-box w-box-inverse">
-                       <p><h3>Mission</h3></p>
-                        <p>“To provide out-of-the-box solutions to personal and corporate travel needs, with a holistic approach to service which creates a travel experience that exceeds customer expectations with a touch of professionalism and class.”</p>
+                       <p align="justify"><h3>Mission</h3></p>
+                        <p align="justify">“To provide out-of-the-box solutions to personal and corporate travel needs, with a holistic approach to service which creates a travel experience that exceeds customer expectations with a touch of professionalism and class.”</p>
                         <div class="clearfix"></div>
-                        <p><h3>Vision</h3></p>
-                        <p>“To be the vanguard of the global travel and tourism industry, always ensuring quality with close regard for safety and customer satisfaction.”</p>
+                        <p align="justify"><h3>Vision</h3></p>
+                        <p align="justify">“To be the vanguard of the global travel and tourism industry, always ensuring quality with close regard for safety and customer satisfaction.”</p>
                     </div>
                 </div>
             </div>
@@ -52,41 +52,41 @@
     <div class="w-section inverse">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <h3 class="section-title">Our Expertise</h3>
+                <div class="col-md-6">
+                    <h3 class="section-title">Our Services</h3>
 
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Holidays and Tours</span>
+                            <span class="sr-only">Retail Travel Services (B2C)</span>
                         </div>
                     </div>
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Flight Bookings</span>
+                            <span class="sr-only">Corporate Travel Services (B2B)</span>
                         </div>
                     </div>
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Hotels</span>
+                            <span class="sr-only">Tours Packaging</span>
                         </div>
                     </div>
                     <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-two" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                            <span class="sr-only">Air Port Pickups/Drop Offs</span>
+                            <span class="sr-only">Group Travel Facilitation</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <h3 class="section-title">Global services</h3>
+                <!--<div class="col-md-4">-->
+                    <!--<h3 class="section-title">Services</h3>-->
 
-                    <ul class="list-check">
-                        <li><i class="fa fa-check"></i>Retail Travel Services (B2C)</li>
-                        <li><i class="fa fa-check"></i> Corporate Travel Services (B2B)</li>
-                        <li><i class="fa fa-check"></i> Tours Packaging</li>
-                        <li><i class="fa fa-check"></i> Group Travel Facilitation</li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
+                    <!--<ul class="list-check">-->
+                        <!--<li><i class="fa fa-check"></i>Retail Travel Services (B2C)</li>-->
+                        <!--<li><i class="fa fa-check"></i> Corporate Travel Services (B2B)</li>-->
+                        <!--<li><i class="fa fa-check"></i> Tours Packaging</li>-->
+                        <!--<li><i class="fa fa-check"></i> Group Travel Facilitation</li>-->
+                    <!--</ul>-->
+                <!--</div>-->
+                <div class="col-md-6">
                     <h3 class="section-title">Why choose us</h3>
                     <ul class="bullet">
                         <li>
