--- a/.tmp/public/linker/modules/contact/contact.html
+++ b/.tmp/public/linker/modules/contact/contact.html
@@ -87,7 +87,7 @@
                 <div class="col-md-12 top-buffer">
                     <div class="row">
                         <div class="col-md-4">
-                            <h3 class="section-title">Ikeja Branch</h3>
+                            <h3 class="section-title">Ikeja</h3>
                             <div class="contact-info">
                                 <h5>Address</h5>
                                 <p>Suite 1-04, Centage Plaza</p>
@@ -112,7 +112,7 @@
 
 
                     <div class="col-md-4">
-                        <h3 class="section-title">Abuja Office</h3>
+                        <h3 class="section-title">Abuja</h3>
                         <div class="contact-info">
                             <h5>Address</h5>
                             <p>Gwandal Center,</p>
