--- a/.tmp/public/linker/modules/home/home.html
+++ b/.tmp/public/linker/modules/home/home.html
@@ -50,7 +50,7 @@
                 Your one stop shop for all things travel. Corporate travel, leisure travel, travel insurance, visa and a host of other services.
             </p>
             <!--<a href="http://ajala.ng" class="btn btn-two btn-lg ls-l" style="top:75%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:3500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Our Travel Portal</a>-->
-            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Learn More From Us</a>
+            <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Ask Us</a>
         </div>
 
         <div class="ls-slide" data-ls="transition2d:1;timeshift:-1000;">
@@ -144,7 +144,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>Relationships</h4>
-                                <p>At QTL, we aim to create value in our relationship with you. We have evolved from transactional business operations to collaborative partnerships with our clients. Whether it's corporate of private travel, business or leisure, we will work with you to develop a travel plan that fits your purpose. <strong>At QTL, it's all about you.</strong></p>
+                                <p>At QTL, we aim to create value in our relationship with you. We have evolved from transactional business operations to collaborative partnerships with our clients. Whether it's corporate or private travel, business or leisure, we will work with you to develop a travel plan that fits your purpose. <strong>At QTL, it's all about you.</strong></p>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                 <div class="col-md-12">
                     <div class="text-center">
                         <h4><i class="fa fa-quote-left fa-3x"></i></h4>
-                        <h2>The World is a book And those who do not travel read only one page !!!</h2>
+                        <h2>The World is a book And those who do not travel read only one page</h2>
                         <p>
                             St. Augustine
                         </p>
@@ -215,7 +215,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <h1>
-                        Enhance travel experience, only at Quantum <!--only on our portal -->
+                        Enhanced travel experience, only at Quantum <!--only on our portal -->
                     </h1>
                 </div>
                 <!--<div class="col-md-3">-->
