--- a/.tmp/public/linker/modules/Expressions/expressions.html
+++ b/.tmp/public/linker/modules/Expressions/expressions.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-6">
-                <h2>QT Expressions</h2>
+                <h2>QTL Expressions</h2>
             </div>
             <div class="col-md-6 col-sm-6">
                 <ol class="breadcrumb">
