--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -19,8 +19,8 @@
     <div class="w-section inverse">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark border-fade">
+                <div class="col-lg-3 col-md-6 w-box dark border-fade">
+                    <div >
                         <div class="thmb-img">
                             <i class="fa fa-sitemap"></i>
                         </div>
@@ -30,19 +30,19 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark border-fade">
+                <div class="col-lg-3 col-md-6 w-box dark border-fade">
+                    <div>
                         <div class="thmb-img">
                             <i class="fa fa-group"></i>
                         </div>
 
                         <h2>Retail Travel Services</h2>
-                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy. All our agents are trained to listen and provide you the best deals every time.</p>
+                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy. Our agents are trained to listen and provide you the best deals every time.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6">
-                    <div class="w-box dark border-fade">
+                <div class="col-lg-3 col-md-6 w-box dark border-fade">
+                    <div >
                         <div class="thmb-img">
                             <i class="fa fa-ticket"></i>
                         </div>
@@ -52,8 +52,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-3 col-md-6 ">
-                    <div class="w-box dark last border-fade">
+                <div class="col-lg-3 col-md-6 w-box dark last border-fade">
+                    <div>
                         <div class="thmb-img">
                             <i class="fa fa-truck"></i>
                         </div>
