--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -18,7 +18,7 @@
 <section class="slice bg-3 p-15">
     <div class="w-section inverse">
         <div class="container">
-            <div class="row">
+            <div class="row special">
                 <div class="col-lg-3 col-md-6 w-box dark border-fade">
                     <div >
                         <div class="thmb-img">
