Second from mac

--- a/.tmp/public/linker/modules/about/about.html
+++ b/.tmp/public/linker/modules/about/about.html
@@ -21,13 +21,13 @@
                 <div class="col-md-7">
                     <p align="justify"><strong>Comprising of tested individuals drawn mainly from the aviation and business management industry, QTL has grown to become a leader in her local industry.</strong></p>
                     <p align="justify"><strong>Brief History</strong></p>
-                    <p align="justify">Quantum Travels Limited started with two plastic chairs, a table and a truckload of passion. Incorporated in 2003, we were licensed for operation by IATA in 2004. We have evolved from the era of manual ticketing to become No. 1 on the Billing Settlement Platform(BSP) through high volume of sales and sizeable turnovers.</p>
+                    <p align="justify">Quantum Travels Limited started with two plastic chairs, a table and a truckload of passion. Incorporated in 2003, we were licensed for operations by IATA in 2004. We have evolved from the era of manual ticketing to become No. 1 on the Billing Settlement Platform(BSP) through high volume of sales and sizeable turnovers.</p>
                       <p align="justify">
                           Striving to be more than your average travel agency, QTL expanded into a full blown Travel
                           Management Company providing all aspects of travel management services ranging from visa advisory to security tracking at our travellers' destinations
                       </p>
                      <p align="justify">In 2009, we established an exclusive partnership with BCD Travel, the 3rd largest global Travel Management Company. This partnership
-                         produced BCD Travel Nigeria, the corporate travel management expression of QTL. On this platform we cater to our corporate travellers to facilitate ease of travel and support then in achieving their travel goals through our all encompassing service offering.</p>
+                         produced BCD Travel Nigeria, the corporate travel management expression of QTL. Under this platform, we cater to our corporate travellers to facilitate ease of travel and support then in achieving their travel goals through our all encompassing service offering.</p>
                     <p align="justify">QTL has witnessed exponential growth since inception and now boasts five offices across Nigeria as well as several implants on clients' sites.</p>
                     <p align="justify"><strong>QTL in Figures</strong></p>
                     <p align="justify">Workforce: 64</p>
@@ -107,144 +107,3 @@
         </div>
     </div>
 </section>
-
-<!--<section class="slice bg-3 animate-hover-slide-3">-->
-    <!--<div class="w-section inverse">-->
-    <!--<div class="container">-->
-    <!--<div class="row">-->
-    <!--<div class="col-md-3">-->
-    <!--<div class="w-box inverse">-->
-    <!--<div class="figure">-->
-    <!--<img alt="" src="linker/images/prv/team-img-5.jpg" class="img-responsive">-->
-    <!--<div class="figcaption">-->
-    <!--<ul class="social-icons text-right">-->
-    <!--<li class="text pull-left">More on:</li>-->
-    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<h2>Mike Doe<small>CEO</small></h2>-->
-    <!--<p>-->
-    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-3">-->
-    <!--<div class="w-box inverse">-->
-    <!--<div class="figure">-->
-    <!--<img alt="" src="linker/images/prv/team-img-3.jpg" class="img-responsive">-->
-    <!--<div class="figcaption">-->
-    <!--<ul class="social-icons text-right">-->
-    <!--<li class="text pull-left">More on:</li>-->
-    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<h2>Charles Doe<small>COO</small></h2>-->
-    <!--<p>-->
-    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-3">-->
-    <!--<div class="w-box inverse">-->
-    <!--<div class="figure">-->
-    <!--<img alt="" src="linker/images/prv/team-img-1.jpg" class="img-responsive">-->
-    <!--<div class="figcaption">-->
-    <!--<ul class="social-icons text-right">-->
-    <!--<li class="text pull-left">More on:</li>-->
-    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<h2>Derek Doe<small>Client Services manager</small></h2>-->
-    <!--<p>-->
-    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--<div class="col-md-3">-->
-    <!--<div class="w-box inverse">-->
-    <!--<div class="figure">-->
-    <!--<img alt="" src="linker/images/prv/team-img-2.jpg" class="img-responsive">-->
-    <!--<div class="figcaption">-->
-    <!--<ul class="social-icons text-right">-->
-    <!--<li class="text pull-left">More on:</li>-->
-    <!--<li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-    <!--<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-    <!--<li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
-    <!--</ul>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<h2>Mark Doe<small>Travel Manager</small></h2>-->
-    <!--<p>-->
-    <!--Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus.-->
-    <!--</p>-->
-    <!--</div>-->
-    <!--</div>-->
-
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</section>-->
-
-    <!--<section class="slice bg-3">-->
-    <!--<div class="w-section inverse">-->
-    <!--<div class="container">-->
-    <!--<h3 class="section-title">Our partners / Clients</h3>-->
-    <!--<div class="row">-->
-    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
-    <!--<div class="client">-->
-    <!--<a href="#">-->
-    <!--<img src="linker/images/clients/client-1.png" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
-    <!--<div class="client">-->
-    <!--<a href="#">-->
-    <!--<img src="linker/images/clients/client-2.png" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
-    <!--<div class="client">-->
-    <!--<a href="#">-->
-    <!--<img src="linker/images/clients/client-3.png" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
-    <!--<div class="client">-->
-    <!--<a href="#">-->
-    <!--<img src="linker/images/clients/client-4.png" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
-    <!--<div class="client">-->
-    <!--<a href="#">-->
-    <!--<img src="linker/images/clients/client-7.png" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-md-2 col-sm-4 col-xs-6">-->
-    <!--<div class="client">-->
-    <!--<a href="#">-->
-    <!--<img src="linker/images/clients/client-6.png" alt="">-->
-    <!--</a>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</section>-->
