--- a/.tmp/public/linker/modules/home/home.html
+++ b/.tmp/public/linker/modules/home/home.html
@@ -47,7 +47,7 @@
             <h3 class="ls-l title" style="width:500px; top:25%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">Travelling? Need to plan the perfect getaway?</h3>
             <h3 class="ls-l subtitle" style="top:40%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:1500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">Quantum Travels.....Every journey answers a question</h3>
             <p class="ls-l text-standard" style="width:500px; top:55%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:2500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;">
-                Your one stop shop for all things travel. Corporate travel, leisure travel, travel insurance, visa and a host of other services.
+                Your one-stop for all things travel. Corporate, leisure, vocational, travel insurance, visa and a host of other services.
             </p>
             <!--<a href="http://ajala.ng" class="btn btn-two btn-lg ls-l" style="top:75%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:3500;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Our Travel Portal</a>-->
             <a href="mailto:info@quantumtravelsng.com" class="btn btn-two btn-lg ls-l" style="top:84%; left:80px;" data-ls="offsetxin:0;offsetyin:250;durationin:1000;delayin:4000;offsetxout:0;offsetyout:-8;easingout:easeInOutQuart;scalexout:1.2;scaleyout:1.2;" target="_blank">Ask Us</a>
@@ -176,7 +176,7 @@
                             </div>
                             <div class="col-md-9">
                                 <h4>We Listen</h4>
-                                <p>We do not operate in a silo but have a holistic approach to meeting your travel needs. We listen to our clients, suppliers and even our competition to ensure you always win. So, we welcome your feedback and work to implement them to ensure we serve you better every time.</p>
+                                <p>We do not operate in a silo but have a holistic approach to meeting your travel needs. We listen to our clients, suppliers and even our competition to ensure you always win. We welcome your feedback and work to implement them to ensure we serve you better every time.</p>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                 <div class="col-md-12">
                     <div class="text-center">
                         <h4><i class="fa fa-quote-left fa-3x"></i></h4>
-                        <h2>The World is a book And those who do not travel read only one page</h2>
+                        <h2>The World is a book and those who do not travel read only one page</h2>
                         <p>
                             St. Augustine
                         </p>
