--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -18,7 +18,7 @@
 <section class="slice bg-3 p-15">
     <div class="w-section inverse">
         <div class="container">
-            <div class="row special">
+           <!-- <div class="row special"> -->
                 <div class="col-lg-3 col-md-6 w-box dark border-fade">
                     <div >
                         <div class="thmb-img">
@@ -38,7 +38,7 @@
                         </div>
 
                         <h2>Retail Travel Services</h2>
-                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy. Our agents are trained to listen and provide you the best deals every time.</p>
+                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy.</p>p> <!-- Our agents are trained to listen and provide you the best deals every time.</p> -->
                     </div>
                 </div>
 
@@ -64,7 +64,7 @@
                     </div>
                 </div>
 
-            </div>
+           <!-- </div> -->
         </div>
     </div>
 </section>
