Third b from mac

--- a/.tmp/public/linker/modules/services/services.html
+++ b/.tmp/public/linker/modules/services/services.html
@@ -38,7 +38,7 @@
                         </div>
 
                         <h2>Retail Travel Services</h2>
-                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy.</p>p> <!-- Our agents are trained to listen and provide you the best deals every time.</p> -->
+                        <p class="text-center">You do not have to purchase in bulk before we give you the same low fare guarantee our corporate clients enjoy.</p><!--  Our agents are trained to listen and provide you the best deals every time.</p> -->
                     </div>
                 </div>
 
